[package]
name = "minecart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
reqwest = { version = "0.11.13"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }

